--- a/es/testimonials/donor-nancy.html
+++ b/es/testimonials/donor-nancy.html
@@ -2,22 +2,21 @@
 <html lang="es">
 <head>
   <div data-include="/includes_es/meta.html"></div>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Donor Testimonial: Nancy M. Stabins | Tito Needs a Kidney</title>
-    <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Testimonio de donante: Nancy M. Stabins | Tito Necesita un Riñón</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
@@ -26,43 +25,103 @@
   <div data-include="/includes_es/header.html"></div>
 
   <main class="content" id="main">
-  <div data-include="/includes_es/testimonial-subnav.html"></div>
+    <div data-include="/includes_es/testimonial-subnav.html"></div>
 
-      <div class="testimonial-header">
-    <h1>Nancy M. Stabins</h1>
-    <p class="intro">
-      Nancy shares her journey of supporting a loved one through kidney disease 
-      and the transplant process, offering encouragement and real-world perspective 
-      for other families and friends.
-    </p>
-  </div>
+    <div class="testimonial-header">
+      <h1>Nancy M. Stabins</h1>
+      <p class="intro">
+        Nancy comparte su camino de apoyar a un ser querido con enfermedad renal y atravesar el proceso de trasplante,
+        ofreciendo ánimo y una perspectiva real para otras familias y amistades.
+      </p>
+      <p class="muted">
+        Nota: Este testimonio se ha traducido del inglés para mayor claridad; en algunas secciones se muestra el texto original.
+      </p>
+    </div>
 
     <section class="testimonial-body">
-      <p>It started with a wine judge, young, in the prime of his life, and I found out he needed a kidney. So, I started a fundraiser to help him out. My thoughts were that if someone needed a kidney, what could help more than to have some extra money while recuperating from the operation. Little did I realize the scope of his illness and what the next 3 months would mean to me.</p>
+      <p>
+        Todo empezó con un juez de vinos, joven, en la plenitud de su vida, y me enteré de que necesitaba un riñón.
+        Así que organicé una recaudación de fondos para ayudarlo. Pensé que, si alguien necesitaba un riñón, tener algo
+        de dinero extra durante la recuperación de la operación podría ayudar. No alcancé a imaginar el alcance de su
+        enfermedad ni lo que significarían para mí los siguientes tres meses.
+      </p>
 
-      <p>The fundraiser involved wine, of course, wine that I had been “cellaring” for a long time. The event was spectacular. Only 25 people were invited to taste the 15 bottles of wine. The event sold out in 2 hours. The wines were amazing but during this event, the young man, Tito, said how he needed a kidney and the 5 ounces of wine in front of everyone was all the liquid he could drink in a day. That realization hit me like a ton of bricks. My thought was, “he doesn’t need money, he needs a KIDNEY.”</p>
+      <p>
+        La recaudación, por supuesto, giró en torno al vino: botellas que llevaba “en cava” desde hacía mucho tiempo.
+        El evento fue espectacular. Solo se invitó a 25 personas para catar 15 botellas. Se agotó en 2 horas. Los vinos
+        fueron increíbles, pero durante el evento el joven, Tito, explicó que necesitaba un riñón y que las 5 onzas de vino
+        frente a él eran todo el líquido que podía beber en un día. Esa realidad me golpeó como un ladrillo: mi pensamiento fue
+        “no necesita dinero; necesita un RIÑÓN”.
+      </p>
 
-      <p>So, at the ripe age of 67, I began the long process of seeing if I could donate. After all, I had 2 kidneys, why not give one? 20 tubes of blood, CAT scans, MRIs, stress echocardiograms, psychological evaluation, and other tests were scheduled and to my surprise I passed all of them… except one. My systolic (top number) blood pressure was in the 130s and it needed to be 120. After a discussion with the Transplant Center’s Physician Assistant, she felt that if I lost 20 pounds, my blood pressure would go down. I asked her to give me 6 months to lose the weight and see what would happen.</p>
+      <figure class="quote">
+        <blockquote lang="es">«No necesita dinero; necesita un RIÑÓN».</blockquote>
+        <figcaption>— Nancy M. Stabins</figcaption>
+        <details class="original-quote">
+          <summary>Ver cita original (inglés)</summary>
+          <blockquote lang="en">“He doesn’t need money, he needs a KIDNEY.”</blockquote>
+        </details>
+      </figure>
 
-      <p>I also learned that once you donate a kidney, if for some reason you need a kidney, you go to the top of the list. Sounded like a good long-term plan to me. The education I received during this process from other kidney donors as well as transplant professionals was more than I could have expected. I was kept informed throughout.</p>
+      <p>
+        Así que, a la “tierna” edad de 67 años, comencé el largo proceso para ver si podía donar. Al fin y al cabo,
+        tenía dos riñones, ¿por qué no dar uno? Me programaron 20 tubos de sangre, tomografías, resonancias, pruebas de esfuerzo con ecocardiograma,
+        evaluación psicológica y otros estudios, y para mi sorpresa pasé todos… excepto uno. Mi presión sistólica (el número de arriba)
+        estaba en 130 y debía estar en 120. Tras hablar con la asistente del Centro de Trasplante, me dijo que si bajaba 20 libras
+        probablemente bajaría la presión. Le pedí 6 meses para perder el peso y ver qué pasaba.
+      </p>
 
-      <p>I began my weight loss journey by watching what I ate, exercised and lost the 20 pounds in 5 months. Unfortunately, a repeat 24-hour blood pressure monitoring revealed no change in my blood pressure. My disappointment was palpable. I wanted nothing more than to help Tito. My years of being an RN and losing a child at the age of 26 to Congenital Heart Disease made this almost too much to bear. I wanted nothing more than to spare Tito’s mom the pain of losing her son! I wanted Tito to have his health back more than anything. The universe had other plans for me as well as for Tito.</p>
+      <p>
+        También supe que, una vez que donas un riñón, si por alguna razón necesitas uno, pasas al principio de la lista.
+        Me pareció un buen plan a largo plazo. La educación que recibí durante el proceso, tanto de otros donantes como del
+        personal de trasplantes, superó mis expectativas. Me mantuvieron informada en todo momento.
+      </p>
 
-      <p>Tito did get a kidney, which helped me accept my inability to donate, and the experience was so worthwhile because I was able to find out how healthy I was because of all the testing I had gone through. It was worth trying and failing than not trying at all.</p>
+      <p>
+        Empecé a perder peso cuidando lo que comía y haciendo ejercicio, y bajé las 20 libras en 5 meses. Lamentablemente,
+        un monitoreo de presión arterial de 24 horas mostró que no hubo cambio. La decepción fue palpable: no quería nada
+        más que ayudar a Tito. Mis años como enfermera (RN) y haber perdido a un hijo a los 26 años por cardiopatía congénita
+        hicieron que todo fuera casi demasiado para mí. No quería otra cosa que evitarle a la mamá de Tito ese dolor.
+        Más que nada, quería que Tito recuperara la salud. El universo tenía otros planes para ambos.
+      </p>
 
-      <p>Would I go through it again? ABSOLUTELY!!</p>
+      <p>
+        Tito sí recibió un riñón, lo cual me ayudó a aceptar que no pude donar, y aun así la experiencia valió la pena:
+        gracias a todas las pruebas supe cuán saludable estaba. Fue mejor intentarlo y fallar que no intentarlo.
+      </p>
 
-      <p>Lovingly shared to anyone thinking of doing something selfless, just because it is the right thing to do for another person.</p>
+      <figure class="quote">
+        <blockquote lang="es">«Valió más intentarlo y fallar que no intentarlo».</blockquote>
+        <figcaption>— Nancy M. Stabins</figcaption>
+        <details class="original-quote">
+          <summary>Ver cita original (inglés)</summary>
+          <blockquote lang="en">“It was worth trying and failing than not trying at all.”</blockquote>
+        </details>
+      </figure>
+
+      <p>
+        ¿Lo volvería a intentar? ¡¡ABSOLUTAMENTE!!
+      </p>
+      <details class="original-quote">
+        <summary>Ver original</summary>
+        <blockquote lang="en">“Would I go through it again? ABSOLUTELY!!”</blockquote>
+      </details>
+
+      <p>
+        Comparto esto con cariño para cualquiera que esté pensando en hacer algo desinteresado, simplemente porque
+        es lo correcto para otra persona.
+      </p>
 
       <p class="testimonial-author">— Nancy McCullough Stabins, RN<br>11/27/2023</p>
     </section>
 
- <div class="cta">
-    <a href="/es/donor-testimonials.html" class="button">← Back to All Stories</a>
-  </div>
+    <div class="cta">
+      <a href="/es/donor-testimonials.html" class="button">← Volver a todas las historias</a>
+    </div>
   </main>
 
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
