--- a/es/testimonials/donor-amy.html
+++ b/es/testimonials/donor-amy.html
@@ -2,22 +2,21 @@
 <html lang="es">
 <head>
   <div data-include="/includes_es/meta.html"></div>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Donor Testimonial: Amy S. | Tito Needs a Kidney</title>
-    <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Testimonio de donante: Amy S. | Tito Necesita un Riñón</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
@@ -26,41 +25,94 @@
   <div data-include="/includes_es/header.html"></div>
 
   <main class="content" id="main">
-  <div data-include="/includes_es/testimonial-subnav.html"></div>
- <div class="testimonial-header">
-    <h1>Amy</h1>
-    <p class="intro">
-      Amy shares her personal journey of living kidney donation, describing the motivation, 
-      testing process, and life after giving someone a second chance.
-    </p>
-  </div>
+    <div data-include="/includes_es/testimonial-subnav.html"></div>
+
+    <div class="testimonial-header">
+      <h1>Amy</h1>
+      <p class="intro">
+        Amy comparte su recorrido como donante renal en vida: la motivación,
+        el proceso de evaluación y la vida después de darle a alguien una segunda oportunidad.
+      </p>
+      <p class="muted">
+        Nota: Algunas citas se han traducido del inglés para mayor claridad; la versión original se muestra para referencia.
+      </p>
+    </div>
 
     <section class="testimonial-body">
-      <p>I donated a kidney to my cousin in 2005. In 2004, he had woken up acutely blind. It turned out that hypertension secondary to renal failure had caused the blood vessels in his retinas to rupture. It was the first indication that he had that something was wrong. By the time he was diagnosed with renal failure, the underlying cause was no longer apparent. His doctors finally concluded that it had likely been a viral issue, although the specific virus could never be isolated or identified. He began dialysis. Fortunately, once his hypertension was addressed and the blood reabsorbed, his sight was restored.</p>
+      <p>
+        Doné un riñón a mi primo en 2005. En 2004, él se había despertado con una ceguera súbita.
+        Resultó que la hipertensión secundaria a insuficiencia renal había provocado la rotura
+        de los vasos sanguíneos en sus retinas. Fue la primera señal de que algo andaba mal.
+        Para cuando le diagnosticaron la insuficiencia renal, la causa subyacente ya no era evidente.
+        Sus médicos concluyeron que probablemente había sido un problema viral, aunque nunca se logró
+        aislar o identificar el virus específico. Empezó diálisis. Por fortuna, una vez tratada la
+        hipertensión y reabsorbida la sangre, recuperó la vista.
+      </p>
 
-      <p>My aunt reached out to family and friends to let everyone know what was happening and who to contact if anyone was interested in being a donor. There was never any pressure, but I did feel that it would be the right thing for me to get tested.</p>
+      <p>
+        Mi tía se puso en contacto con familiares y amigos para contar lo que estaba sucediendo y a quién
+        contactar si alguien quería ser donante. Nunca hubo presión, pero sentí que era lo correcto hacerme las pruebas.
+      </p>
 
-      <p>Testing went on in stages. Initially, it was bloodwork to see how close of a match I was. I matched at 4 of the 6 sites they tested for at that time (my donation was so long ago that the testing and surgery have likely advanced a lot by now!). Then there were urine screenings and contrast studies to check for appropriate kidney function. I also had to talk to a psychiatrist, who was my advocate through the whole process.</p>
+      <p>
+        Las pruebas se realizaron por etapas. Al principio fueron análisis de sangre para ver qué tan compatible era.
+        En ese momento coincidía en 4 de los 6 sitios que se evaluaban (mi donación fue hace tanto que es probable
+        que las pruebas y la cirugía hayan avanzado mucho desde entonces). Luego hubo análisis de orina y estudios con
+        contraste para comprobar la función renal adecuada. También tuve que hablar con un/a psiquiatra, quien fue mi
+        defensor/a durante todo el proceso.
+      </p>
 
-      <p>I ended up traveling down to Florida to have my surgery at the same site as my cousin’s. I was told afterwards that there was some difficulty getting me to breathe again on my own after anesthesia. I would consider that to be the biggest complication that I faced during the process or since.</p>
+      <p>
+        Terminé viajando a Florida para operarme en el mismo centro que mi primo. Me dijeron después que tuvieron
+        cierta dificultad para que volviera a respirar por mi cuenta tras la anestesia. Considero que esa fue la
+        mayor complicación que enfrenté durante el proceso o desde entonces.
+      </p>
 
-      <p>Recovery was pretty uneventful. My sister came to help me for the first few weeks since I had a 2-year-old child at the time and was unable to lift anything heavy initially. I was otherwise able to get around and continue normal activity after surgery (although I am admittedly stubborn and don’t like to be dependent on people, so I may have been more active than my doctors would have preferred!).</p>
+      <p>
+        La recuperación transcurrió sin incidentes. Mi hermana vino a ayudarme las primeras semanas, ya que tenía
+        un hijo de 2 años y al principio no podía levantar peso. Por lo demás, pude moverme y retomar la actividad
+        normal tras la cirugía (aunque admito que soy terca y no me gusta depender de la gente, así que quizá estuve
+        más activa de lo que mis médicos habrían preferido).
+      </p>
 
-      <p>I had my second son in 2006 and had no complications from the recent kidney donation. I have also been able to continue to be active and have completed several ultramarathons. I was only given three activity restrictions, all based on the likelihood of injury to the remaining kidney. I was advised not to ski, not to ride motorcycles, and not to ride horses. I had been a horrible skier, so that was easy to give up. I had already had my motorcycle adventure, so I am ok with that limitation as well. I have elected to keep riding horses and accept the risk that comes with it. Hypertension is also a potential complication, but I have had no issues with it thus far.</p>
+      <p>
+        Tuve a mi segundo hijo en 2006 y no tuve complicaciones relacionadas con la donación reciente. También he
+        podido seguir activa y he completado varios ultramaratones. Me dieron solo tres restricciones de actividad,
+        basadas en la probabilidad de lesión al riñón restante: me aconsejaron no esquiar, no andar en motocicleta
+        y no montar a caballo. Ya era pésima esquiando, así que fue fácil dejarlo. Ya había tenido mi aventura en
+        motocicleta, así que también acepté esa limitación. Elegí seguir montando a caballo y asumir el riesgo que
+        conlleva. La hipertensión también es una posible complicación, pero hasta ahora no he tenido problemas.
+      </p>
 
-      <p>My cousin and I just celebrated the 18th anniversary of the donation on March 10th of this year. We both know how fortunate we are that it is still working well.</p>
+      <p>
+        Mi primo y yo acabamos de celebrar el 18.º aniversario de la donación el 10 de marzo de este año. Ambos
+        sabemos lo afortunados que somos de que siga funcionando bien.
+      </p>
 
-      <p>I have no regrets about my decision. Although a lot of the specifics of the procedure have certainly changed over the years, I would be happy to talk more to anyone who is considering donating a kidney to Tito. He has my contact information and can pass it along to you.</p>
+      <figure class="quote">
+        <blockquote lang="es">
+          «No me arrepiento de mi decisión. Estaría encantada de hablar con cualquier persona que esté considerando
+          donar un riñón a Tito. Él tiene mi información de contacto y puede compartírtela».
+        </blockquote>
+        <figcaption>— Amy S.</figcaption>
+        <details class="original-quote">
+          <summary>Ver cita original (inglés)</summary>
+          <blockquote lang="en">
+            “I have no regrets about my decision… I would be happy to talk more to anyone who is considering donating a kidney to Tito. He has my contact information and can pass it along to you.”
+          </blockquote>
+        </details>
+      </figure>
 
       <p class="testimonial-author">— Amy S.</p>
     </section>
 
- <div class="cta">
-    <a href="/es/donor-testimonials.html" class="button">← Back to All Stories</a>
-  </div>
+    <div class="cta">
+      <a href="/es/donor-testimonials.html" class="button">← Volver a todas las historias</a>
+    </div>
   </main>
 
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
